@@ -19,6 +19,10 @@
 \alias{rgl.enum.halign}
 \alias{rgl.enum.texmagfilter}
 \alias{rgl.enum.texminfilter}
+\alias{rgl.mousemode}
+\alias{rgl.select}
+\alias{rgl.selectstate}
+\alias{rgl.setselectstate}
 \alias{rgl.getprojection}
 \description{
   internal rgl functions
@@ -43,6 +47,10 @@ rgl.enum.primtype(primtype)
 rgl.enum.halign(halign)
 rgl.enum.texmagfilter(magfiltertype)
 rgl.enum.texminfilter(minfiltertype)
+rgl.mousemode(mode)
+rgl.selectstate()
+rgl.select()
+rgl.setselectstate(state)
 rgl.getprojection()
 }
 \details{
