@@ -105,4 +105,5 @@ v0.64-14
   - fixed rgl.bringtotop, added stay option
   - added 4x4 matrix functions from djmrgl
   - added rgl.user2window and rgl.window2user functions
+  - added selection functions
   
